feat: me endpoint
