# docs/swagger.yaml
@@ -909,6 +909,27 @@ paths:
       summary: Logout user
       tags:
       - users
+  /users/me:
+    get:
+      description: Get the current authenticated user's information
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.User'
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get current user
+      tags:
+      - users
   /users/refresh:
     post:
       consumes:
